Add i18n to Projects Page

--- a/src/app/i18n/locales/en/experience.json
+++ b/src/app/i18n/locales/en/experience.json
@@ -1,5 +1,5 @@
 {
-  "experience.title": "Experience",
+  "title": "Experience",
   "firstExperience.position": "Junior Applications Analyst",
   "firstExperience.description": "I embarked on the <span class=\"font-semibold\">first steps</span> of my professional journey, making significant contributions to the university's technological landscape:",
   "firstExperience.details.first": "I served as an assistant in <span class=\"font-semibold\">data analysis</span>, utilizing the database to create required reports that optimized various business processes.",
