--- a/src/app/i18n/locales/es/experience.json
+++ b/src/app/i18n/locales/es/experience.json
@@ -1,5 +1,5 @@
 {
-  "experience.title": "Experiencia",
+  "title": "Experiencia",
   "firstExperience.position": "Analista de Aplicaciones Junior",
   "firstExperience.description": "Emprendí los <span class=\"font-semibold\">primeros pasos</span> de mi trayectoria profesional, realizando importantes aportes al panorama tecnológico de la universidad:",
   "firstExperience.details.first": "Me desempeñé como asistente en <span class=\"font-semibold\">análisis de datos</span>, utilizando la base de datos para crear los informes requeridos que optimizaron varios procesos del negocio.",
