--- a/src/app/i18n/locales/es/me.json
+++ b/src/app/i18n/locales/es/me.json
@@ -1,5 +1,5 @@
 {
-  "me.title": "Sobre mí",
+  "title": "Sobre mí",
   "me.firstFeature": "Soy de <strong>Cali, Colombia</strong>",
   "me.secondFeature": "Más de <strong>5 años de experiencia</strong> trabajando como <strong>Full Stack Developer</strong>",
   "me.thirdFeature": "Me encantan los <strong>retos de código</strong> en plataformas competitivas",
