--- a/src/app/i18n/locales/en/me.json
+++ b/src/app/i18n/locales/en/me.json
@@ -1,5 +1,5 @@
 {
-  "me.title": "About Me",
+  "title": "About Me",
   "me.firstFeature": "I'm from <strong>Cali, Colombia</strong>",
   "me.secondFeature": "Over <strong>5 years</strong> of experience working as <strong>Full Stack Developer</strong>",
   "me.thirdFeature": "I love the <strong>coding challenges</strong> on competitive platforms",
