Add some improvements in performance, navigation and menu

--- a/src/app/i18n/locales/en/home.json
+++ b/src/app/i18n/locales/en/home.json
@@ -1,5 +1,5 @@
 {
   "title.welcome": "Hello, I'm",
   "title.role": "Software Engineer",
-  "title.p": "And welcome to my <strong>first</strong> portfolio website version :)"
+  "title.p": "And welcome to my <strong>portfolio</strong> :)"
 }
