--- a/src/app/i18n/locales/es/home.json
+++ b/src/app/i18n/locales/es/home.json
@@ -1,5 +1,5 @@
 {
   "title.welcome": "Hola, soy",
   "title.role": "Software Engineer",
-  "title.p": "Y bienvenido a la <strong>primera</strong> versión de mi portafolio :)"
+  "title.p": "Y bienvenido a mi <strong>portafolio</strong> :)"
 }
