--- a/src/app/i18n/locales/en/others.json
+++ b/src/app/i18n/locales/en/others.json
@@ -5,5 +5,6 @@
   "oneMonth": "1 month",
   "months": "months",
   "and": "and",
-  "present": "Present"
+  "present": "Present",
+  "thereIsNothing": "There is nothing"
 }
