--- a/src/app/i18n/locales/es/others.json
+++ b/src/app/i18n/locales/es/others.json
@@ -5,5 +5,6 @@
   "oneMonth": "1 mes",
   "months": "meses",
   "and": "y",
-  "present": "Actualidad"
+  "present": "Actualidad",
+  "thereIsNothing": "No hay nada aquí"
 }
