--- a/src/app/i18n/locales/es/projects.json
+++ b/src/app/i18n/locales/es/projects.json
@@ -7,5 +7,5 @@
   "thirdProject.title": "\"Culebrita\"",
   "thirdProject.description": "Fue mi primer proyecto de videojuego inspirado en el clásico videojuego de Nokia, creé esta versión con la ayuda del popular kit de herramientas <strong>Java Swing</strong> en <strong>NetBeans</strong>, implementando una <strong>lógica de matriz 2D</strong> para darle vida al juego.",
   "fourthProject.title": "Juego de la vida de Conway",
-  "fourthProject.description": "En realidad no es un juego, es un <strong>simulador</strong> que aplica un conjunto de reglas, el resultado es la creación de <strong>patrones visuales</strong> realmente interesantes, vi esos patrones en un video y e hice el simulador para comprobar si eso era cierto."
+  "fourthProject.description": "En realidad no es un juego, es un pequeño <strong>simulador</strong> que aplica un conjunto de reglas, el resultado es la creación de <strong>patrones visuales</strong> realmente interesantes, vi esos patrones en un video e hice el simulador para comprobar si eso era cierto."
 }
