Add refactor in PagesTree and add some partial Stories

--- a/src/app/i18n/locales/en/achievements.json
+++ b/src/app/i18n/locales/en/achievements.json
@@ -2,6 +2,6 @@
   "title": "Other Achievements",
   "description": "I've dedicated part of my free time in other platforms to improve my tech skills",
   "firstAchievements.description": "An awesome platform to solve <strong>coding challenges</strong>, it's a bit different because every challenge combines <strong>math</strong> and programming.",
-  "secondAchievements.description": "Ever since I met HTB I discovered another way to squeeze your brain with <strong>Hacking</strong> and It's a good platform to get involved with <strong>OWASP</strong>.",
+  "secondAchievements.description": "Since I discovered <strong>HTB</strong> it has become another different way of studying <strong>Hacking</strong> and it is a good platform to get involved with <strong>OWASP</strong>.",
   "thirdAchievements.description": "I like to solve the classic <strong>Hacker Rank</strong> problems, It turned out in a good way to <strong>study algorithms</strong> and a good resource for <strong>technical tests</strong>."
 }
