--- a/src/app/i18n/locales/es/achievements.json
+++ b/src/app/i18n/locales/es/achievements.json
@@ -2,6 +2,6 @@
   "title": "Otros Logros",
   "description": "He dedicado parte de mi tiempo libre en otras plataformas a mejorar mis habilidades técnicas.",
   "firstAchievements.description": "Una plataforma increíble para resolver <strong>desafíos de código</strong>, es un poco diferente porque cada desafío combina <strong>matemáticas</strong> y programación.",
-  "secondAchievements.description": "Desde que conocí a HTB descubrí otra manera de exprimir tu cerebro con <strong>Hacking</strong> y es una buena plataforma para involucrarte con <strong>OWASP</strong>.",
+  "secondAchievements.description": "Desde que descubrí <strong>HTB</strong> se ha convertido en otra manera diferente de estuiar <strong>Hacking</strong> y es una buena plataforma para involucrarse con <strong>OWASP</strong>.",
   "thirdAchievements.description": "Me gusta resolver los problemas clásicos de <strong>Hacker Rank</strong>. Resultó ser una buena manera de <strong>estudiar algoritmos</strong> y un buen recurso para <strong>pruebas técnicas</strong>."
 }
