Add changes on the i18n translations

--- a/src/app/i18n/locales/en/experience.json
+++ b/src/app/i18n/locales/en/experience.json
@@ -14,7 +14,7 @@
   "thirdExperience.details.second": "I designed and implemented the Frontend architecture for a <span class=\"font-semibold\">Corporative newsletters Web Application</span>, developed comprehensive UX/UI elements that aligned with client requirements.",
   "fourthExperience.position": "Ssr. Full Stack Developer II",
   "fourthExperience.description": "An enriching experience putting my technical versatility into practice in the development of <span class=\"font-semibold\">several projects</span>.",
-  "fourthExperience.details.first": "In my initial project, I collaborated with a wide-ranging team to redesign a <span class=\"font-semibold\">property management platform</span>. My responsibilities included developing UI features and making crucial adjustments to the existing codebase.",
+  "fourthExperience.details.first": "In my initial project, I collaborated with a wide-ranging team to redesign a <span class=\"font-semibold\">property management platform</span>, my responsibilities included developing UI features and making crucial adjustments to the existing codebase.",
   "fourthExperience.details.second": "I played a supporting part in enhancing the UI of a <span class=\"font-semibold\">property rental platform</span> of a foreigner client closely aligning with the client's requirements.",
   "fifthExperience.position": "Senior Full Stack Developer I",
   "fifthExperience.description": "I was involved in the execution of <span class=\"font-semibold\">two distinct projects</span>, it has been one of the experiences with the biggest technical challenges and lessons learned with a diverse team.",
