--- a/src/app/i18n/locales/en/skillLevels.json
+++ b/src/app/i18n/locales/en/skillLevels.json
@@ -1,12 +1,12 @@
 {
   "firstLevel.title": "Enthusiast",
-  "firstLevel.description": "I've used the skill for a time, but I feel that I need master it",
+  "firstLevel.description": "I've used the skill for a while, but I still haven't fully mastered it",
   "firstLevel.workExperience": "1 year or less",
   "secondLevel.title": "Confident",
   "secondLevel.description": "I have more experience and I can use the skill without problems",
   "secondLevel.workExperience": "2 years",
   "thirdLevel.title": "\"Reposaito\"",
-  "thirdLevel.description": "I've worked with the skill almost all of my life and I've faced hard problems",
+  "thirdLevel.description": "I have worked with this skill for a long time and have faced difficult problems",
   "thirdLevel.workExperience": "3 years or more",
   "fourthLevel.title": "My Favorite",
   "fourthLevel.description": "It's just a flag for mark my favorite skills regardless of my expertise",
