--- a/src/app/i18n/locales/es/experience.json
+++ b/src/app/i18n/locales/es/experience.json
@@ -14,7 +14,7 @@
   "thirdExperience.details.second": "Diseñé e implementé la arquitectura Frontend para una <span class=\"font-semibold\">aplicación web de boletines corporativos</span>, desarrollé elementos integrales de UX/UI que se alineaban con los requerimientos del cliente.",
   "fourthExperience.position": "Ssr. Full Stack Developer II",
   "fourthExperience.description": "Una experiencia enriquecedora poniendo en practica mi versatilidad técnica en el desarrollo de <span class=\"font-semibold\">varios proyectos</span>.",
-  "fourthExperience.details.first": "En mi proyecto inicial, colaboré con un equipo amplio para rediseñar una plataforma de <span class=\"font-semibold\">afianzamiento de propiedades</span>. Mis responsabilidades incluían desarrollar funciones de interfaz de usuario y realizar ajustes cruciales al código base existente.",
+  "fourthExperience.details.first": "En mi proyecto inicial, colaboré con un equipo amplio para rediseñar una plataforma de <span class=\"font-semibold\">afianzamiento de propiedades</span>, mis responsabilidades incluían desarrollar funciones de interfaz de usuario y realizar ajustes cruciales al código base existente.",
   "fourthExperience.details.second": "Desempeñé un papel de apoyo en la mejora de la interfaz de usuario de una <span class=\"font-semibold\">plataforma de alquiler de propiedades</span> de un cliente extranjero, alineándome estrechamente con los requerimientos del cliente.",
   "fifthExperience.position": "Senior Full Stack Developer I",
   "fifthExperience.description": "Estuve involucrado en la ejecución de <span class=\"font-semibold\">dos proyectos diferentes</span>, ha sido una de las experiencias con mayores desafios técnicos y lecciones aprendidas con un equipo diverso.",
