--- a/src/app/i18n/locales/es/me.json
+++ b/src/app/i18n/locales/es/me.json
@@ -3,7 +3,7 @@
   "me.firstFeature": "Soy de <strong>Cali, Colombia</strong>",
   "me.secondFeature": "Más de <strong>5 años de experiencia</strong> trabajando como <strong>Full Stack Developer</strong>",
   "me.thirdFeature": "Me encantan los <strong>retos de código</strong> en plataformas competitivas",
-  "me.fourthFeature": "Los libros de <strong>Stephen King</strong> son mis favoritos",
-  "me.fifthFeature": "Uso el <strong>ejercicio</strong> como una forma de renovar mi mente",
+  "me.fourthFeature": "Los libros de terror de <strong>Stephen King</strong> son mis favoritos",
+  "me.fifthFeature": "No todo es <strong>código</strong>, el <strong>ejercicio con pesas</strong> es parte de mi rutina",
   "me.sixthFeature": "Algunas veces me gusta aprender canciones en <strong>Fingerstyle</strong>"
 }
