--- a/src/app/i18n/locales/es/skillLevels.json
+++ b/src/app/i18n/locales/es/skillLevels.json
@@ -1,12 +1,12 @@
 {
   "firstLevel.title": "Entusiasta",
-  "firstLevel.description": "He usado la habilidad por un tiempo, pero siento que necesito dominarla",
+  "firstLevel.description": "He usado la habilidad por un tiempo, pero todavia no la domino del todo",
   "firstLevel.workExperience": "1 año o menos",
   "secondLevel.title": "Confiado",
   "secondLevel.description": "Tengo más experiencia y puedo usar la habilidad sin problemas",
   "secondLevel.workExperience": "2 años",
   "thirdLevel.title": "\"Reposaito\"",
-  "thirdLevel.description": "He trabajado con esta habilidad casi toda mi vida y me he enfrentado a problemas difíciles",
+  "thirdLevel.description": "He trabajado con esta habilidad durante mucho tiempo y me he enfrentado a problemas difíciles.",
   "thirdLevel.workExperience": "3 años o más",
   "fourthLevel.title": "Mi favorita",
   "fourthLevel.description": "Es solo una bandera para marcar mis habilidades favoritas independientemente de mi experiencia.",
