--- a/src/app/i18n/locales/en/me.json
+++ b/src/app/i18n/locales/en/me.json
@@ -3,7 +3,7 @@
   "me.firstFeature": "I'm from <strong>Cali, Colombia</strong>",
   "me.secondFeature": "Over <strong>5 years</strong> of experience working as <strong>Full Stack Developer</strong>",
   "me.thirdFeature": "I love the <strong>coding challenges</strong> on competitive platforms",
-  "me.fourthFeature": "The <strong>Stephen King's</strong> books are my favorite ones",
-  "me.fifthFeature": "I use the <strong>Morning Workout</strong> as a way to renew my mind",
+  "me.fourthFeature": "The <strong>Stephen King</strong>'s horror books are my favorites",
+  "me.fifthFeature": "Not everything is <strong>code</strong>, <strong>exercise with weights</strong> is part of my routine",
   "me.sixthFeature": "Oftentimes I like to learn songs to play in <strong>Fingerstyle</strong>"
 }
