--- a/src/app/i18n/locales/en/skills.json
+++ b/src/app/i18n/locales/en/skills.json
@@ -1,4 +1,4 @@
 {
   "title": "Tech Skills",
-  "description": "I've worked with some skills for a longer time than other, also there are skills that a love to use... <br /><br /> If you want you can filter them by:"
+  "description": "I have decided to categorize the level of my skills based on <strong>time of experience</strong> and indicate which ones are my <strong>favorites</strong>:"
 }
