--- a/src/app/i18n/locales/es/skills.json
+++ b/src/app/i18n/locales/es/skills.json
@@ -1,4 +1,4 @@
 {
   "title": "Habilidades Técnicas",
-  "description": "He trabajado con algunas habilidades durante más tiempo que con otras, también hay habilidades que me encanta usar... <br /><br /> Si quieres puedes filtrarlas por:"
+  "description": "He decidido categorizar el nivel de mis habilidades basadas en <strong>tiempo de experiencia</strong> y señalar cuales son mis <strong>favoritas</strong>:"
 }
