Make adjustments on the Home Page and translations

--- a/src/app/i18n/locales/en/experience.json
+++ b/src/app/i18n/locales/en/experience.json
@@ -6,7 +6,7 @@
   "firstExperience.details.first": "I served as an assistant in <span class=\"font-semibold\">data analysis</span>, utilizing the database to create required reports that optimized various business processes.",
   "firstExperience.details.second": "My involvement extended to the enhancement of a the <span class=\"font-semibold\">corporative Desktop App</span> according to the requirements, pivotal to managing diverse business processes and automate some manual tasks.",
   "secondExperience.position": "Software Development Team Coordinator",
-  "secondExperience.description": "An experience where I played a pivotal role in the successful execution of <span class=\"font-semibold\">several projects and requirements</span> that streamlined academic processes.",
+  "secondExperience.description": "An experience where I played a pivotal role in the successful execution of <span class=\"font-semibold\">several projects and requirements</span> that streamlined academic processes at my <span class=\"font-semibold\">University</span>.",
   "secondExperience.details.first": "I coordinated the development of a several requirements for the <span class=\"font-semibold\">corporative Web App</span> and <span class=\"font-semibold\">Desktop App</span> designed to manage a wide array of academic processes for both students and teachers.",
   "thirdExperience.position": "Backend Developer Engineer",
   "thirdExperience.description": "An experience full of <span class=\"font-semibold\">unexpected challenges</span> and first steps with various technical skills, especially on the <span class=\"font-semibold\">Frontend</span> side.",
