--- a/src/app/i18n/locales/es/experience.json
+++ b/src/app/i18n/locales/es/experience.json
@@ -6,7 +6,7 @@
   "firstExperience.details.first": "Me desempeñé como asistente en <span class=\"font-semibold\">análisis de datos</span>, utilizando la base de datos para crear los informes requeridos que optimizaron varios procesos del negocio.",
   "firstExperience.details.second": "Mi participación se extendió a la mejora de una <span class=\"font-semibold\">Aplicación de Escritorio corporativa</span> de acuerdo con los requerimientos, fundamental para gestionar diversos procesos de negocio y automatizar algunas tareas manuales.",
   "secondExperience.position": "Coordinador de Equipo de Desarrollo",
-  "secondExperience.description": "Una experiencia donde tuve un papel fundamental en la ejecución exitosa de <span class=\"font-semibold\">varios proyectos y requerimientos</span> que agilizaron los procesos académicos.",
+  "secondExperience.description": "Una experiencia donde tuve un papel fundamental en la ejecución exitosa de <span class=\"font-semibold\">varios proyectos y requerimientos</span> que agilizaron los procesos académicos en mi <span class=\"font-semibold\">Universidad</span>.",
   "secondExperience.details.first": "Coordiné el desarrollo de varios requerimientos para la <span class=\"font-semibold\">Aplicación Web</span> y la <span class=\"font-semibold\">Aplicación de Escritorio</span> corporativa diseñadas para gestionar una amplia gama de procesos académicos tanto para estudiantes como para profesores.",
   "thirdExperience.position": "Backend Developer Engineer",
   "thirdExperience.description": "Una experiencia llena de <span class=\"font-semibold\">desafíos inesperados</span> y primeros pasos con diversas habilidades técnicas, especialmente en el lado <span class=\"font-semibold\">Frontend</span>.",
