--- a/src/app/i18n/locales/es/me.json
+++ b/src/app/i18n/locales/es/me.json
@@ -1,9 +1,8 @@
 {
   "title": "Sobre mí",
   "me.firstFeature": "Soy de <strong>Cali, Colombia</strong>",
-  "me.secondFeature": "Más de <strong>5 años de experiencia</strong> trabajando como <strong>Full Stack Developer</strong>",
-  "me.thirdFeature": "Me encantan los <strong>retos de código</strong> en plataformas competitivas",
-  "me.fourthFeature": "Los libros de terror de <strong>Stephen King</strong> son mis favoritos",
-  "me.fifthFeature": "No todo es <strong>código</strong>, el <strong>ejercicio con pesas</strong> es parte de mi rutina",
-  "me.sixthFeature": "Algunas veces me gusta aprender canciones en <strong>Fingerstyle</strong>"
+  "me.secondFeature": "Más de <strong>5 años de experiencia</strong> trabajando en la industria del <strong>Desarrollo de Software</strong>",
+  "me.thirdFeature": "He tenido diferentes experiencias en proyectos como <strong>Desarrollador Full Stack</strong>",
+  "me.fourthFeature": "Me encantan los <strong>retos de código</strong> en plataformas competitivas",
+  "me.fifthFeature": "Parte de mi tiempo libre lo dedico a desarrollar pequeños <strong>proyectos personales</strong>"
 }
