--- a/src/app/i18n/locales/en/projects.json
+++ b/src/app/i18n/locales/en/projects.json
@@ -1,7 +1,7 @@
 {
   "title": "Personal Projects",
   "firstProject.title": "Bomberman (NES)",
-  "firstProject.description": "A little universitarian project, it's a copy of the classic Bomberman (NES) (it's still <strong>unfinished</strong>) developed with the help of an awesome JS Framework for videogames using the <strong>prototype-based</strong> programming.",
+  "firstProject.description": "A little universitarian project, it's a copy of the classic Bomberman (NES) developed with the help of an awesome JS Framework for videogames using the <strong>prototype-based</strong> programming.",
   "secondProject.title": "Tower of Hanoi",
   "secondProject.description": "Another little universitarian project, it's a copy of the classic puzzle Tower of Hanoi (with the intention to understand the algorithm) and also simulates the solution of the game from <strong>any combination</strong>.",
   "thirdProject.title": "Snake",
